--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>mario-demo</finalName>
+		<finalName>mario-sample</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
