--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,23 @@
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
 
+	<!-- Filter -->
+	<!-- web.xml 中的 filter-mapping 元素的顺序决定了 web 容器把过滤器应用到 servlet 的顺序。
+	若要反转过滤器的顺序，你只需要在 web.xml 文件中反转 filter-mapping 元素即可。 -->
+
+	<filter>
+		<filter-name>LogFilter</filter-name>
+		<filter-class>com.mochxiao.filter.LogFilter</filter-class>
+		<init-param>
+			<param-name>test_param</param-name>
+			<param-value>Initialization Paramter</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>LogFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<filter>
 		<filter-name>mario</filter-name>
 		<filter-class>com.junicorn.mario.MarioFilter</filter-class>
@@ -17,5 +34,94 @@
 		<filter-name>mario</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
+
+	<!-- Error handle -->
+	<!-- servlet definition -->
+	<servlet>
+		<servlet-name>ErrorHandler</servlet-name>
+		<servlet-class>com.mochxiao.servlets.error.ErrorHandler</servlet-class>
+	</servlet>
+	<!-- servlet mappings -->
+	<servlet-mapping>
+		<servlet-name>ErrorHandler</servlet-name>
+		<url-pattern>/ErrorHandler</url-pattern>
+	</servlet-mapping>
+
+	<!-- error-code related error pages -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/ErrorHandler</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/ErrorHandler</location>
+	</error-page>
+
+	<!-- exception-type related error pages -->
+	<error-page>
+		<exception-type>
+			javax.servlet.ServletException
+		</exception-type >
+		<location>/ErrorHandler</location>
+	</error-page>
+
+	<!--<error-page>-->
+		<!--<exception-type>java.io.IOException</exception-type >-->
+		<!--<location>/ErrorHandler</location>-->
+	<!--</error-page>-->
+
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type >
+		<location>/ErrorHandler</location>
+	</error-page>
+
+	<!-- Servlet -->
+	<servlet>
+		<servlet-name>HelloWorld</servlet-name>
+		<servlet-class>com.mochxiao.servlets.HelloWorldServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloWorld</servlet-name>
+		<url-pattern>/HelloWorld</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>HelloForm</servlet-name>
+		<servlet-class>com.mochxiao.servlets.HelloFormServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloForm</servlet-name>
+		<url-pattern>/HelloForm</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ReadCookies</servlet-name>
+		<servlet-class>com.mochxiao.servlets.ReadCookies</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ReadCookies</servlet-name>
+		<url-pattern>/ReadCookies</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>DeleteCookies</servlet-name>
+		<servlet-class>com.mochxiao.servlets.DeleteCookies</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteCookies</servlet-name>
+		<url-pattern>/DeleteCookies</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>SessionTrack</servlet-name>
+		<servlet-class>com.mochxiao.servlets.SessionTrack</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SessionTrack</servlet-name>
+		<url-pattern>/SessionTrack</url-pattern>
+	</servlet-mapping>
+
+
+
 </web-app>
