--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>1.3.2</version>
         </dependency>
 
+		<dependency>
+			<groupId>commons-dbutils</groupId>
+			<artifactId>commons-dbutils</artifactId>
+			<version>1.6</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
